# ChangeLog for dev-ruby/libnotify
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libnotify-0.7.2 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> +libnotify-0.7.2.ebuild:
  Version bump.

*libnotify-0.7.1 (08 Jan 2012)

  08 Jan 2012; Hans de Graaff <graaff@gentoo.org> +libnotify-0.7.1.ebuild:
  Version bump. Restrict tests due to new dependency.

*libnotify-0.6.0 (15 Dec 2011)

  15 Dec 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.6.0.ebuild:
  Version bump.

*libnotify-0.5.9 (25 Nov 2011)

  25 Nov 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.9.ebuild:
  Version bump.

*libnotify-0.5.7 (05 Aug 2011)

  05 Aug 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.7.ebuild:
  Version bump.

*libnotify-0.5.6 (13 Jul 2011)

  13 Jul 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.6.ebuild,
  +metadata.xml:
  Initial import.
