@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST libnotify-0.5.7.gem 29184 RMD160 1cfdf1591f549a74dd707a4bf1b68786df051183 SHA1 dd6488a421897ed04b6189e16b6468c86f2f1b36 SHA256 0645899aab628b9e16e924708c21aa65e84c2550e5a17c2643d0f8a19fb337a5
-DIST libnotify-0.7.1.gem 29184 RMD160 a64180d7e8d54bdd573e5776d747d5724764ca28 SHA1 03d0a5bc89dd86ac58edda541991af8a49a82c3a SHA256 f8d0690f1b4b190fdd0550148907ed7235e92dafa50616e855e8372a29f18159
-DIST libnotify-0.7.2.gem 29184 RMD160 7e32d0d83a748429073a90cd0c90c0134a7f6bd1 SHA1 8aaf28959db849cf54dce0b22d9227a27f2f31cb SHA256 abcc13c180ad14360c47e25c3ee2c0b43d0b5140d927c5a1e9255eae5bc92a8e
+DIST libnotify-0.5.7.gem 29184 SHA256 0645899aab628b9e16e924708c21aa65e84c2550e5a17c2643d0f8a19fb337a5 SHA512 1c254028bd1a563d78a05be0b202435c1f0cbb85f198205c141c624e8e60cd3f6a7ed95bc2d662941a7e82a7871a864b1a395b080d01c704db28f55cbeb241bc WHIRLPOOL 4a27dc2085ee18b0a140aef62a78fb416c1466dc0ddd3bd84669761fc3173752fcf81e0b1e3fbb8e232adaf9d7e0a9bcdbe4635761a61f608233ec8c35e82343
+DIST libnotify-0.7.1.gem 29184 SHA256 f8d0690f1b4b190fdd0550148907ed7235e92dafa50616e855e8372a29f18159 SHA512 7f4d672203cea3c5251c24377067ead2305245811ad545f8aa03a02271de6375574beab764c2d198d15556437f3f611face8f96429f3c4632033598bb37d0de8 WHIRLPOOL 6a052c4e89594c753754fb210277d9390c0d795bef8c2ddb358d07cf4e2090ae49f878ee2e965bcd80a65452674528ebfb7af22d34cb5745333febaa2fd74e29
+DIST libnotify-0.7.2.gem 29184 SHA256 abcc13c180ad14360c47e25c3ee2c0b43d0b5140d927c5a1e9255eae5bc92a8e SHA512 121e0d0600133c8c42de131dcd8d5b744600fc2467b9c9d372f41654ecfc2127ad5586f11b85443fb0f08154b2b3422d7a160ba7ac783abc4f0f80347c2d5571 WHIRLPOOL 78f92d48ab154ab7a748d08d03055d629f6c0a166bc92154dd9c03c9001b6cec7f9232e5fd57ac8e59e6e296e763fce21523e50591f07e3a880b2771decd2968
+DIST libnotify-0.8.0.gem 29184 SHA256 f0bfaf6ffd2203007b109d0bc8176e01939700af861d699d280fd59a4ecaa253 SHA512 657c154420afb9441459b927144a8b2a5a94353d772e945ce0c90b755238d4dbecfccb84935477d94560b6564ff52095a1cb1120947d27aeee145d5c45130569 WHIRLPOOL e14d5d6698f7f23b1d20d265cbd8a6f9d59205797b820b6e6f361503597a386df0b7e7789d401425ca6ae0dca8c4dbc30ec5d43a5c30abfefdf676ce1dabc5f1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk+ICO4ACgkQiIP6VqMIqNd/OQD8Cze3V1vQ+N1wKy/mI4n3zZcS
-Fov/hGKqhsYTgCGOrJsA/0FLM97TFZ+5gt/yirAdLBjb2R7jZsyhoG0cL49OCkw3
-=a38j
+iF4EAREIAAYFAlBuh0kACgkQiIP6VqMIqNfXhgEAlccWkoZYuUbAIAf96GF5pZe6
+krH2FjX4f1Q8ilueZvMA/0rMwef0f8oXZpmn0Frg72jQf4KeAAGVrQTwP/1esX7r
+=7E0p
 -----END PGP SIGNATURE-----
